--- a/WEDE/2_class/index.html
+++ b/WEDE/2_class/index.html
@@ -1,3 +1,7 @@
-<h1 style="color: red;">Todays Weather</h1>
-<h2>Todays Weather is Gonna be a Scorcher!</h2>
-<p>The tempurature will be 25*!</p>
+<html>
+    <body style="background-color: powderblue;">
+        <h1 style="color: red; background-color: bisque;">Todays Weather</h1>
+        <h2 style="color: blue; background-color: blueviolet;">Todays Weather is Gonna be a Scorcher!</h2>
+        <p style="font-size: 50px; background-color: brown;">The tempurature will be 25*!</p>
+    </body>
+</html>
