--- a/WEDE/ice_tast_1/index.html
+++ b/WEDE/ice_tast_1/index.html
@@ -42,11 +42,11 @@
             </tr>
         </table>
         <br>
-        <img style="width:100%" src="https://images.unsplash.com/photo-1678483790053-71367bc7a02c"/>
+        <img style="width:100%" src="istockphoto-814423752-612x612.jpg"/>
         <p>
             This is a paragraph with some text. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
-        <img style="width:100%" src="https://media.istockphoto.com/id/814423752/photo/eye-of-model-with-colorful-art-make-up-close-up.jpg?s=612x612&w=is&k=20&c=oznwuNIm1nYMO545gPMGyYr2OxwUXlaPh7Y3_6ANELA="/>
+        <img style="width:100%" src="photo-1678483790053-71367bc7a02c.jfif"/>
         <p>
             Another paragraph with more text. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
