--- a/WEDE/ice_task_2/about.html
+++ b/WEDE/ice_task_2/about.html
@@ -3,6 +3,23 @@
 <head>
   <title>About</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 90%;
+      margin-top: 20px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    th, td {
+      border: 1px solid #333;
+      padding: 10px;
+      text-align: left;
+    }
+    th {
+      background-color: #f4f4f4;
+    }
+  </style>
 </head>
 <body>
 
@@ -18,6 +35,46 @@
   </p>
 
   <img src="rosebank.jpg" alt="Rosebank College" width="400">
+
+  <h2>Qualifications Offered</h2>
+  <table>
+    <tr>
+      <th>Qualification</th>
+      <th>Field</th>
+      <th>Duration</th>
+      <th>Subjects Required</th>
+    </tr>
+    <tr>
+      <td>Higher Certificate in IT</td>
+      <td>Information Technology</td>
+      <td>1 Year</td>
+      <td>Mathematics or Mathematical Literacy, English</td>
+    </tr>
+    <tr>
+      <td>Diploma in Business Management</td>
+      <td>Business</td>
+      <td>3 Years</td>
+      <td>English, Business Studies or Economics</td>
+    </tr>
+    <tr>
+      <td>Bachelor of Education</td>
+      <td>Education</td>
+      <td>4 Years</td>
+      <td>English, One Teaching Subject (e.g. Mathematics, Life Sciences)</td>
+    </tr>
+    <tr>
+      <td>Diploma in Graphic Design</td>
+      <td>Design & Media</td>
+      <td>3 Years</td>
+      <td>English, Visual Arts or Design</td>
+    </tr>
+    <tr>
+      <td>Higher Certificate in Marketing</td>
+      <td>Marketing</td>
+      <td>1 Year</td>
+      <td>English, Business Studies</td>
+    </tr>
+  </table>
 
 </body>
 </html>
