--- a/WEDE/ice_task_2/contact.html
+++ b/WEDE/ice_task_2/contact.html
@@ -16,6 +16,7 @@
     .normal {
       font-size: 18px;
     }
+
   </style>
 </head>
 <body>
@@ -28,8 +29,11 @@
 
   <div class="contact-info">
     <p class="email">info@rosebankcollege.co.za</p>
-    <p class="normal">123 Main Street, Johannesburg</p>
-    <p class="normal">+27 12 345 6789</p>
+    <ul>
+      <li class="normal">123 Main Street</li>
+      <li class="normal">Johannesburg</li>
+      <li class="normal">+27 12 345 6789</li>
+    </ul>
   </div>
 
 </body>
