--- a/WEDE/ice_task_2/about.html
+++ b/WEDE/ice_task_2/about.html
@@ -19,6 +19,19 @@
     th {
       background-color: #f4f4f4;
     }
+    dl {
+      width: 90%;
+      margin: 20px auto;
+      font-size: 16px;
+    }
+    dt {
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    dd {
+      margin-left: 20px;
+      margin-bottom: 10px;
+    }
   </style>
 </head>
 <body>
@@ -75,6 +88,24 @@
       <td>English, Business Studies</td>
     </tr>
   </table>
+
+  <h2>Key Terms</h2>
+  <dl>
+    <dt>Higher Certificate</dt>
+    <dd>An entry-level qualification focusing on foundational skills in a specific field, usually completed in 1 year.</dd>
+
+    <dt>Diploma</dt>
+    <dd>A qualification that provides both theoretical and practical training in a chosen field, generally over 3 years.</dd>
+
+    <dt>Bachelor's Degree</dt>
+    <dd>An undergraduate academic degree awarded for a course of study lasting 3 to 4 years.</dd>
+
+    <dt>Field of Study</dt>
+    <dd>The main area or discipline in which a qualification is focused, such as IT, Business, or Education.</dd>
+
+    <dt>Subjects Required</dt>
+    <dd>The school subjects a student must have completed in order to be admitted into a specific qualification.</dd>
+  </dl>
 
 </body>
 </html>
